# language-database-benchmark

./: .gitignore  README.md
Assemblyscript/: index.html  package.json
Assemblyscript/assembly/: index.ts
Bend/: .out.hvm  main.bend
Bun/: README.md  bun.lockb  index.ts  package.json
DENO-TS/: index.html  main.ts  package.json
DENO-TS/api/: fetch-deno.ts
DENO-TS/src/: lib.rs
Dart/cli/: pubspec.yaml
Deno/wasm/: echo_server.ts
Elixir/: hello_world.ex
Elixir/turso/: ## Copilot.md  .gitignore  README.md  hello_world.exs  mix.exs
Gleam/api/: README.md  gleam.toml  manifest.toml
Go/: README.md  fly.toml  go.mod  go.sum  main.go
Go/chatbot/: go.mod  go.sum
HONO - TS/: bun.lockb
HONO - TS/src/: index.ts
JAX/: app.py
Javascript/bun-clickhouse/: README.md  bun.lockb  package.json
Javascript/express-sst-app/: package-lock.json  sst.config.ts
Javascript/node-data-streams/: README.md  bun.lockb  index.ts  package.json
Javascript/ts-tinybird/: README.md  bun.lockb
Kotlin/TURSO/: build.gradle.kts  settings.gradle.kts
Mojo/Initial/: hello
Python/: main.py
Python/TURSO/: hello.py  main.py  models.py  plot.py  requirements.txt  test.py
Python/fastapi/: script.py
Python/file-split-python/: scrypt.py
Python/pandas/: script.py
Rust/TURSO/: .env
Rust/calculator/: Cargo.toml  calculator.proto
Rust/chatbot/: Cargo.toml
Rust/hello-rust/: Cargo.toml
Rust/rust-mongo/: Cargo.toml
Rust/rust-mongo/src/: main.rs
express-sst-app/: dockerfile  index.mjs  package-lock.json  package.json  sst.config.ts
ts-tinybird/: bun.lockb  package.json
(+1818 files in other folders)
