[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.1"
tokio = { version = "1", features = ["full"] }
prost = "0.13.1"


[build-dependencies]
tonic-build = "0.12"