[package]
name = "rust-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "3.0.0"
soup = "0.5"
scraper = "=0.19.1"
reqwest = { version = "0.12", features = ["json"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = { version = "1", features = ["derive"] }
async-openai = "0.23.4"
serde_json = "1.0.120"
thiserror = "1.0.63"
